packages/frontend/tests/type_errors/unknown_alternative.nemo
variant V {
  struct S {}
}

fn main() = {
  V::Unknown {};

  match V::S{} {
    V::Unknown _ => {}
  }
}
